Archive/d4241c693d3576ad8e4be069f90e33fa-d8f63f6dac8f078b5ced8c6f534bb664/output
+ g++ -std=c++11 -pthread main.cpp
main.cpp:1:1: error: ‘user_query’ does not name a type
 user_query = "html body#chat-body div#container div#main div#sidebar div#sidebar-content div#widgets div.sidebar-widget ul#present-users.collapsible li div.avatar img";
 ^
main.cpp:2:1: error: ‘var’ does not name a type
 var users = jQuery.makeArray($(user_query)).map(
 ^
main.cpp:6:1: error: expected unqualified-id before ‘)’ token
 );
 ^
main.cpp:8:1: error: ‘users’ does not name a type
 users;
 ^
main.cpp:10:1: error: ‘textbox_query’ does not name a type
 textbox_query = "html body#chat-body div#container div#main div#input-area table#input-table tbody tr td.chat-input div#bubble textarea#input";
 ^
main.cpp:11:1: error: ‘tb’ does not name a type
 tb = $(textbox_query)[0];
 ^
main.cpp:12:1: error: ‘tb’ does not name a type
 tb.onkeyup = function() {
 ^
